# my-project

./: Dockerfile  Dockerfile.save  Dockerfile.save.1  README.md  fraction.cpp  fraction.h  fraction_app  main.cpp  test.cpp  test_app
.github/workflows/: ci.yml
html/: annotated.html  classes.html  files.html  fraction_8h_source.html  structFraction-members.html  structFraction.html
html/search/: classes_0.js
latex/: annotated.tex  files.tex  fraction_8h_source.tex  refman.tex  structFraction.tex
rpn_calculator/: .CMakeLists.txt.swp  CMakeLists.txt  final_test.sh  quick_test.sh  simple_test.sh  test_correct.sh  test_fixed.sh  test_simple.sh
rpn_calculator/include/: rpn.h
rpn_calculator/src/: main.cpp  rpn.cpp
rpn_calculator/tests/: CMakeLists.txt  test_rpn.cpp
